[gd_scene load_steps=5 format=3 uid="uid://cmxsl7bqkjyjp"]

[ext_resource type="Theme" uid="uid://yihqjdsgadyv" path="res://theme.tres" id="1_emynt"]
[ext_resource type="Script" path="res://scripts/mainmenu.gd" id="2_diogw"]
[ext_resource type="AudioStream" uid="uid://kxtcfjlp1yk" path="res://sounds/bgm/ForensicsUnderscore.ogg" id="3_bv25c"]
[ext_resource type="Script" path="res://scripts/RegisterScreen.gd" id="4_20sw3"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_emynt")
script = ExtResource("2_diogw")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bv25c")
autoplay = true

[node name="MainMenuButtons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="MainMenuButtons"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 224.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 36
text = "canon_"
vertical_alignment = 1

[node name="Version" type="Label" parent="MainMenuButtons"]
modulate = Color(1, 1, 1, 0.25098)
layout_mode = 0
offset_left = 64.0
offset_top = 107.0
offset_right = 144.0
offset_bottom = 126.0
theme_override_font_sizes/font_size = 12
text = "Ver. a0.0.1"

[node name="NewGame" type="Button" parent="MainMenuButtons"]
layout_mode = 0
offset_left = 64.0
offset_top = 144.0
offset_right = 312.0
offset_bottom = 176.0
theme_override_font_sizes/font_size = 14
text = "Create Sanctifier..."
alignment = 0

[node name="Continue" type="Button" parent="MainMenuButtons"]
layout_mode = 0
offset_left = 64.0
offset_top = 184.0
offset_right = 312.0
offset_bottom = 209.0
theme_override_font_sizes/font_size = 14
text = "Continue"
alignment = 0

[node name="ContinueAs" type="Button" parent="MainMenuButtons"]
layout_mode = 0
offset_left = 64.0
offset_top = 216.0
offset_right = 312.0
offset_bottom = 248.0
theme_override_font_sizes/font_size = 14
text = "Log in"
alignment = 0

[node name="Settings" type="Button" parent="MainMenuButtons"]
layout_mode = 0
offset_left = 64.0
offset_top = 272.0
offset_right = 312.0
offset_bottom = 297.0
theme_override_font_sizes/font_size = 14
text = "Settings"
alignment = 0

[node name="Quit" type="Button" parent="MainMenuButtons"]
layout_mode = 0
offset_left = 64.0
offset_top = 304.0
offset_right = 312.0
offset_bottom = 329.0
theme_override_font_sizes/font_size = 14
text = "Quit"
alignment = 0

[node name="RegisterScreen" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 328.0
offset_top = 96.0
offset_right = 648.0
offset_bottom = 400.0
script = ExtResource("4_20sw3")

[node name="Label" type="Label" parent="RegisterScreen"]
layout_mode = 0
offset_top = 24.0
offset_right = 320.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 11
text = "--- Sanctifier Registration Procedure ---"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameBlock" type="Control" parent="RegisterScreen"]
anchors_preset = 0
offset_left = 24.0
offset_top = 48.0
offset_right = 304.0
offset_bottom = 75.0

[node name="GenderPicker" type="OptionButton" parent="RegisterScreen/NameBlock"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 20.0
item_count = 2
popup/item_0/text = "Lord"
popup/item_0/id = 0
popup/item_1/text = "Lady"
popup/item_1/id = 1

[node name="NameLineEdit" type="LineEdit" parent="RegisterScreen/NameBlock"]
layout_mode = 0
offset_left = 84.0
offset_right = 280.0
offset_bottom = 27.0
placeholder_text = "Name"

[node name="PasswordLineEdit" type="LineEdit" parent="RegisterScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 80.0
offset_right = 304.0
offset_bottom = 107.0
placeholder_text = "Access Key"
secret = true

[node name="ConfirmPassword" type="LineEdit" parent="RegisterScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 112.0
offset_right = 304.0
offset_bottom = 139.0
placeholder_text = "Confirm Access Key"
secret = true

[node name="Confirm" type="Button" parent="RegisterScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 152.0
offset_right = 216.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 12
text = "CONFIRM"
alignment = 0

[node name="Abort" type="Button" parent="RegisterScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 184.0
offset_right = 216.0
offset_bottom = 207.0
theme_override_font_sizes/font_size = 12
text = "ABORT"
alignment = 0

[connection signal="pressed" from="MainMenuButtons/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MainMenuButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="mainMenuShow" from="RegisterScreen" to="." method="_on_register_screen_main_menu_show"]
[connection signal="pressed" from="RegisterScreen/Confirm" to="RegisterScreen" method="_on_confirm_pressed"]
[connection signal="pressed" from="RegisterScreen/Abort" to="RegisterScreen" method="_on_abort_pressed"]
